--- a/Quiz/pages/quizhome.html
+++ b/Quiz/pages/quizhome.html
@@ -115,29 +115,25 @@
         <div class="icons">
           <ul>
             <li>
-              <a href="https://www.linkedin.com/in/sauravmukherjee44/"
+              <a href="https://www.linkedin.com/in/anshsingh7755/"
                 ><i class="fab fa-linkedin-in icon"></i
               ></a>
             </li>
             <li>
-              <a href="https://github.com/SauravMukherjee44" target="github">
+              <a href="https://github.com/anshsingh7755" target="github">
                 <i class="fab fa-github icon"></i>
               </a>
             </li>
             <li>
-              <a href="https://twitter.com/mesourav44"
+              <a href="https://twitter.com/singhansh7755"
                 ><i class="fab fa-twitter icon"></i
               ></a>
             </li>
-            <li>
-              <a href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw"
-                ><i class="fab fa-youtube icon"></i
-              ></a>
-            </li>
+           
           </ul>
         </div>
         <div>
-          <p>©2021 Copyright AEC Library</p>
+          <p>©2024 Copyright NIET Library</p>
         </div>
         <div>
           <p>
