--- a/sign-up-page/index.html
+++ b/sign-up-page/index.html
@@ -7,14 +7,14 @@
   <link rel="icon" href="../assets/logos/finalLogo.webp" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <title>SIGN UP - AEC Library</title>
+  <title>SIGN UP - NIET Library</title>
 </head>
 
 <body>
   <h1 id="err" style="visibility: hidden;"></h1>
   <div class="section">
     <div class="header">
-      AEC Library - Sign Up
+      NIET Library - Sign Up
     </div>
     <p id="errormsg"></p>
     <p id="successmsg"></p>
