--- a/resource.html
+++ b/resource.html
@@ -1372,16 +1372,16 @@
             <div class="lower">
                 <div class="social-container">
                     <div class="social-icons">
-                        <a class="Twitter" href="https://twitter.com/mesourav44" target="_blank" title="Twitter"
+                        <a class="Twitter" href="https://twitter.com/singhansh7755" target="_blank" title="Twitter"
                             rel="noopener noreferrer" aria-label="Follow us on Twitter"><i
                                 class="fab fa-twitter"></i></a>
-                        <a class="Instagram" href="https://www.instagram.com/mesouravofficial/" target="_blank"
+                        <a class="Instagram" href="https://www.instagram.com/himnshuuu.25/" target="_blank"
                             title="Instagram" rel="noopener noreferrer" aria-label="Follow us on Instagram"><i
                                 class="fab fa-instagram"></i></a>
-                        <a class="linkedin" href="https://www.linkedin.com/in/sauravmukherjee44/" target="_blank"
+                        <a class="linkedin" href="https://www.linkedin.com/in/anshsingh7755/" target="_blank"
                             title="LinkedIn" rel="noopener noreferrer" aria-label="Follow us on LinkedIn"><i
                                 class="fab fa-linkedin"></i></a>
-                        <a class="Github" href="https://github.com/SauravMukherjee44/" target="_blank" title="GitHub"
+                        <a class="Github" href="https://github.com/anshsingh7755/" target="_blank" title="GitHub"
                             rel="noopener noreferrer" aria-label="Follow us on GitHub"><i
                                 class="fab fa-github-square"></i></a>
                         <a class="Blog" href="#" target="_blank" title="Blog" rel="noopener noreferrer"
@@ -1390,7 +1390,7 @@
                 </div>
                 <div class="bottom">
                     <p>Copyright © <span id="footer-year"></span> <a
-                            href="https://github.com/SauravMukherjee44/Aec-Library-Website"> @ NIET Library
+                            href="https://github.com/anshsingh7755/Niet-Library-Website"> @ NIET Library
                         </a> All rights reserved</p>
                 </div>
             </div>
