--- a/public/faq.html
+++ b/public/faq.html
@@ -147,12 +147,12 @@
     </div>
     <div class="faq-five" data-aos="fade">
       <!-- faq question -->
-      <h3 class="faq-page">Q: What are the benefits of an account in NIET-Library? </h3>
+      <h3 class="faq-page">Q: What are the benefits of an account in Niet-Library? </h3>
       <!-- faq answer -->
       <div class="faq-body">
         <p>
-            Contribute to Niet-library :
-            Niet-library is a community initiative to build a robust book catalog. Anyone can add or edit data about books
+            Contribute to NIET-library :
+            NIET-library is a community initiative to build a robust book catalog. Anyone can add or edit data about books
             and blogs.</p><br>
         <p>
             Personalize your experience :
