--- a/index.html
+++ b/index.html
@@ -883,7 +883,7 @@
         <p>
         <ol>
           <li>Contribute to NIET-library :
-            Aec-library is a community initiative to build a robust book catalog. Anyone can add or edit data about books
+            Niet-library is a community initiative to build a robust book catalog. Anyone can add or edit data about books
             and blogs.
           </li>
           <li>
@@ -955,7 +955,7 @@
 
       <li><a href="tel:95768xyza">Ph:95768xyza</a></li>
       <li><a href="mailto:hello@nietlibrary.com" target="_blank">E:hello@nietlibrary.com</a></li>
-      <li><a href="https://www.linkedin.com/in/sauravmukherjee44/" target="_blank"> Linkedin</a></li>
+      <li><a href="https://www.linkedin.com/in/anshsingh7755/" target="_blank"> Linkedin</a></li>
 
 
       <li><a href="https://github.com/anshsingh7755" target="github">Github</a></li>
